deployment-strategies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-strategies
  labels:
    app: my-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9101"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9101
    targetPort: 9101
    protocol: TCP
